@@ -20,6 +20,8 @@ S3method(print,AsyncListEnv)
 S3method(print,AsyncTask)
 S3method(print,BatchJobsAsyncTask)
 S3method(resolved,AsyncTask)
+S3method(run,AsyncTask)
+S3method(run,BatchJobsAsyncTask)
 S3method(status,AsyncListEnv)
 S3method(status,AsyncTask)
 S3method(status,BatchJobsAsyncTask)
@@ -44,6 +46,7 @@ export(error)
 export(expired)
 export(failed)
 export(finished)
+export(run)
 export(status)
 importFrom(BatchJobs,addRegistryPackages)
 importFrom(BatchJobs,batchExport)
